fdo#45260: Objects having line thickness misplaced while pasting.

Even with the proposed fix of commit id d999ae10 it still seems
to be broken with reference to i#112978 . Maybe a better way
of fixing it. Hence reverting this patch partially to fix fdo#45260